# cex

./: .gitignore  Makefile  README.md  cargo.toml  docker-compose.yml
crates/db/: Cargo.toml
crates/db/migrations/: 20260406213649_create_users.sql  20260408220000_create_orders.sql  20260408221500_add_updated_at_to_orders.sql
crates/db/src/: lib.rs  orders.rs  users.rs
crates/kafka/: Cargo.toml
crates/kafka/src/: lib.rs  order.rs
crates/redis-client/: Cargo.toml
crates/redis-client/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
domains/finance/wallet-service/: Cargo.toml
domains/finance/wallet-service/src/: main.rs  routes.rs
domains/gateway/auth-service/: Cargo.toml
domains/gateway/auth-service/src/: main.rs  routes.rs
domains/trading/matching-engine/: Cargo.toml
domains/trading/order-service/: Cargo.toml
domains/trading/order-service/src/: main.rs  routes.rs
tests/integration-tests/: Cargo.toml
tests/integration-tests/tests/: auth_tests.rs
utils/: Cargo.toml
utils/src/: lib.rs
