[package]
name = "kafka"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.36.2", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
