[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = "0.15"
actix-web = "4"
serde_json = "1"
dotenvy = "0.15"
uuid.workspace = true
chrono.workspace = true
db = { path = "../../crates/db" }
redis-client = { path = "../../crates/redis-client" }
types = { path = "../../crates/types" }
# Note: We'll test auth-service by importing its routes if we make them accessible
auth-service = { path = "../../domains/gateway/auth-service" }
