[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
actix-web.workspace = true
serde_json.workspace = true
dotenvy = "0.15"
uuid.workspace = true
chrono.workspace = true
db = { path = "../../crates/db" }
redis-client = { path = "../../crates/redis-client" }
types = { path = "../../crates/types" }
# Note: We'll test auth-service by importing its routes if we make them accessible
auth-service = { path = "../../domains/gateway/auth-service" }
