[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web.workspace = true
bcrypt.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
serde.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
dotenvy = "0.15"
types = { path = "../../../crates/types" }
db = { path = "../../../crates/db" }
redis-client = { path = "../../../crates/redis-client" }
utils = { path = "../../../utils" }
