[package]
name = "order-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
deadpool-redis = "0.16.0"
dotenvy = "0.15"
anyhow = "1.0"
jsonwebtoken = "9.3.0"

# Workspace crates
types = { path = "../../../crates/types" }
db = { path = "../../../crates/db" }
redis-client = { path = "../../../crates/redis-client" }
kafka = { path = "../../../crates/kafka" }
utils = { path = "../../../utils" }
